tests/import_invalid_path_absolute.stderr
tests/import_invalid_path_absolute.hop:2:1: error: HOP2020: invalid import path (absolute path)
