tests/import_invalid_path_absolute.hop
// Verifies import invalid path absolute.
import "/"

fn main() {}
